<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ui.reminder.AddReminderActivity">

    <!-- Input Judul -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Tanggal Pengingat -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnDatePicker"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/description_date_button"
            android:onClick="showDatePicker"
            android:src="@drawable/ic_date" />

        <TextView
            android:id="@+id/add_tv_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/reminder_date"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <!-- Input Lokasi Pengingat -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/reminder_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReminderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Tombol Simpan -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/save"
        android:textColor="@android:color/white" />

    <!-- Tombol Batal -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />

</LinearLayout>
