<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/red">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:id="@+id/reminderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/Reminder_title"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Date -->
        <TextView
            android:id="@+id/reminderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminderTitle"
            android:text="@string/reminder_date"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <!-- Location -->
        <TextView
            android:id="@+id/reminderLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminderDate"
            android:layout_marginTop="16dp"
            android:text="@string/reminder_location"
            android:textColor="#040404"
            android:textSize="14sp" />

        <!-- Checkmark Icon -->
        <ImageView
            android:id="@+id/checkmarkIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_unchecked"
            android:contentDescription="@string/checkmark_icon" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
